[project]
name = "idcamp-image-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "safetensors>=0.7.0",
    "torch>=2.11.0",
    "transformers>=5.5.3",
]
